# pi-sandbox

./: .gitignore  Dockerfile  README.md  models.json  run.sh
agent/: APPEND_SYSTEM.md  models.json  pi-permissions.jsonc  settings.json
agent/agents/: implementer.md  planner.md  reviewer.md  scout.md  worker.md
agent/extensions/checkpoint/: index.ts
agent/extensions/current-datetime/: index.ts
agent/extensions/glob/: index.ts
agent/extensions/output-parser/: index.ts  parser.ts
agent/extensions/quality-monitor/: index.ts  quality.ts
agent/extensions/review-flow/: index.ts
agent/extensions/review-flow/agents/: implementer.md  reviewer.md
agent/extensions/thinking-budget/: index.ts
agent/extensions/web-search/: index.ts
agent/extensions/write-guard/: index.ts
agent/skills/web-search/: Cargo.toml
agent/skills/web-search/src/: client.rs  lib.rs  main.rs  types.rs
searxng/: .env  docker-compose.yml  run.sh  searxng.container  searxng.service  searxng.volume
searxng/core-config/: settings.yml
