[package]
name = "web-search"
version = "0.1.0"
edition = "2024"
resolver = "3"

[dependencies]
reqwest = { version = "0.13", features = ["blocking", "json", "gzip", "rustls"], default-features = false }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
scraper = "0.26"
serde = { version = "1", features = ["derive"] }
urlencoding = "2"
regex = "1"
