[package]
name = "web-search"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive", "env"] }
reqwest = { version = "0.13.3", features = ["json", "gzip", "deflate", "query", "form"] }
scraper = "0.26.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.2", features = ["macros", "rt-multi-thread"] }
urlencoding = "2.1.3"
